force-app/main/default/objects/NIC__c/NIC__c.object-meta.xml
<CustomObject>
    <label>NIC</label>
    <nameField>
        <label>Serial Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NICs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>