force-app/main/default/objects/NIC__c/fields/asset__c.field-meta.xml
<CustomField>
    <fullName>asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>NICs</relationshipLabel>
    <relationshipName>NICs</relationshipName>
    <type>Lookup</type>
</CustomField>