force-app/main/default/objects/NIC__c/fields/mac_address_1__c.field-meta.xml
<CustomField>
    <fullName>mac_address_1__c</fullName>
    <label>MAC Address 1</label>
    <length>17</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>