force-app/main/default/objects/NIC__c/fields/model__c.field-meta.xml
<CustomField>
    <fullName>model__c</fullName>
    <label>Model</label>
    <length>80</length>
    <type>Text</type>
</CustomField>