force-app/main/default/objects/NIC__c/fields/node__c.field-meta.xml
<CustomField>
    <fullName>node__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Node</label>
    <referenceTo>Node__c</referenceTo>
    <relationshipLabel>NICs</relationshipLabel>
    <relationshipName>NICs</relationshipName>
    <type>Lookup</type>
</CustomField>